fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -943,11 +943,11 @@
             background-color: #E5EBE2;
         }
         .fa-linkedin {
-            background: #3d3d3d;
+            background: #E5EBE2;
             color: #87A678;
         }
         .fa-envelope {
-            background: #3d3d3d;
+            background: #E5EBE2;
             color: #87A678;
         }
     }
